traversal.column.traversalbycolumn.TraversalByColumn.scala.error
Erreur de compilation :
TraversalByColumn:2: error: '(' expected but identifier found.
  while positionTest()==false {
        ^TraversalByColumn:8: error: illegal start of simple expression
}
^